fix(backgrounds): fix name visibility, perf++ :not(.hasBackground) => .notBackground

--- a/public/css/avatar.styl
+++ b/public/css/avatar.styl
@@ -28,7 +28,7 @@ future re: pets and whatnot, this is just temporary.
 	position: relative
 	cursor: pointer
 // users can have image backgrounds
-.herobox:not(.hasBackground)
+.herobox.noBackgroundImage
 	background: $color-herobox
 	transition: border 0.25s ease-out, background 0.25s ease-out//, padding 0.13s ease-out
 	outline: 1px solid rgba(0,0,0,0.1)
@@ -63,7 +63,7 @@ future re: pets and whatnot, this is just temporary.
         border 1px solid black
 
 // if not user's avatar, remove lines for party unity
-.herobox:not(.isUser):not(.hasBackground)
+.herobox.noBackgroundImage:not(.isUser)
   outline: 0
   background-color: darken($color-herobox, 8%)
 
@@ -77,10 +77,11 @@ future re: pets and whatnot, this is just temporary.
 
 // expose hero info on hover, taking
 // into account the extra pet space
-.herobox:hover:not(.hasBackground), .herobox:focus:not(.hasBackground)
-	background: lighten($color-herobox, 30%)
-	&:after
-		opacity: 1
+.herobox:hover, .herobox:focus
+  &:after
+    opacity: 1
+.herobox.noBackgroundImage:hover, .herobox.noBackgroundImage:focus
+  background: lighten($color-herobox, 30%)
 
 // positioning the sprites, etc
 .herobox
@@ -92,5 +93,5 @@ future re: pets and whatnot, this is just temporary.
 	.character-sprites span, .pet
 		position: absolute
 
-.herobox.isLeader:not(.hasBackground)
+.herobox.isLeader.noBackgroundImage
 	background: lighten($color-herobox, 10%)
